@@ -1,3 +1,8 @@
+2003-03-22  Markus Germeier  <mager@tzi.de>
+
+	* kernel/mpio.c (probe_mpio, write_mpio, read_mpio): 
+	  automagically find USB bulk endpoints and use them
+
 2003-03-15  Markus Germeier  <mager@tzi.de>
 
 	* libmpio/mpio.c (mpio_init_internal): detect up to four
